--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
     <script>
-        alert("Click on Video symbol and give the necessry permissions \n 2. To start the video cpture click on the circular white button \n 3. Video will be cptured for 30 seconds and the recording is downloaded to te machine \n")
+//         alert("Click on Video symbol and give the necessry permissions \n 2. To start the video cpture click on the circular white button \n 3. Video will be cptured for 30 seconds and the recording is downloaded to te machine \n")
     </script>
 <script src="app.bundle.js" type="text/javascript"></script>
 
